Clone Zortea - Update links in the menu/footer and Finish

--- a/CloneZortea/index.html
+++ b/CloneZortea/index.html
@@ -37,9 +37,9 @@
                     <li><a href="empresa.html">A Empresa</a></li>
                     <li><a href="obras.html">Obras</a></li>
                     <li><a href="solucoes.html">Soluções</a></li>
-                    <li><a href="#">Clientes</a></li>
-                    <li><a href="#">Notícias</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="clientes.html">Clientes</a></li>
+                    <li><a href="noticias.html">Notícias</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
             <div class="menu-responsive">
@@ -115,8 +115,8 @@
                                     <a href="#">Saiba mais</a>
                                 </div>
                             </div>
-                        </div>
-                    </div><!-- display -->
+                        </div><!-- display -->
+                    </div><!-- text -->
                 </div><!-- sobre -->
                 <div class="box">
                     <a href="#">
@@ -148,11 +148,11 @@
                     <ul>
                         <li><a href="/CloneZortea/">Home</a></li>
                         <li><a href="empresa.html">A Empresa</a></li>
-                        <li><a href="#">Obras</a></li>
-                        <li><a href="#">Soluções</a></li>
-                        <li><a href="#">Clientes</a></li>
-                        <li><a href="#">Notícias</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="obras.html">Obras</a></li>
+                        <li><a href="solucoes.html">Soluções</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="noticias.html">Notícias</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div><!-- menu -->
