--- a/CloneZortea/clientes.html
+++ b/CloneZortea/clientes.html
@@ -38,8 +38,8 @@
                     <li><a href="obras.html">Obras</a></li>
                     <li><a href="solucoes.html">Soluções</a></li>
                     <li><a href="clientes.html">Clientes</a></li>
-                    <li><a href="#">Notícias</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="noticias.html">Notícias</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
             <div class="menu-responsive">
@@ -91,8 +91,8 @@
                         <li><a href="obras.html">Obras</a></li>
                         <li><a href="solucoes.html">Soluções</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="#">Notícias</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="noticias.html">Notícias</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div><!-- menu -->
