Project Gallery Images - Finalized

--- a/GalleryImage/index.html
+++ b/GalleryImage/index.html
@@ -113,6 +113,13 @@
             </div><!-- gallery_image -->
 
             <button id="search-button" class="button" role="button">View history</button>
+
+            <div class="history_images">
+                <h2 id="title">History of Images Viewed</h2>
+
+                <div class="display"><!-- images --></div>
+            
+            </div><!-- history_images -->
         </div><!-- style02 -->
 
     </div><!-- container -->
