Finality project Calculator

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -14,7 +14,7 @@
     <section class="calculator">
         <header>
             <div class="buttonCalc">
-                <button>Calculator One Account</button>
+                <button onclick="removeHistory()">Calculator One Account</button>
             </div>
 
             <icon class="theme">
@@ -24,8 +24,7 @@
         </header>
 
         <div class="display">
-            <!-- AINDA NÃO SERÁ IMPLEMENTADO ESSA OPÇÃO -->
-            <!-- <span class="history">history: 10 - 9 = 8</span> -->
+            <span class="history"></span>
             <span class="operation"></span>
             <span class="result"></span>
         </div><!-- display -->
@@ -36,7 +35,7 @@
 
     </section><!-- calculator -->
 
-
+    <!-- ---------------------- SCRIPTS ---------------------- -->
     <script src="calculator.js"></script>
 </body>
 
