Update Project LayoutModern - Add progress nav bar

--- a/LayoutModern/index.html
+++ b/LayoutModern/index.html
@@ -11,10 +11,14 @@
 
 <body>
 
+    <div class="scroll_nav">
+        <div class="progress_nav" id="myBar"></div>
+    </div>
+
     <header>
         <div class="__logo">
             <img src="assets/img/shared/logo.svg" alt="Logo">
-        </div><!-- __icon -->
+        </div><!-- __logo -->
 
         <div class="__menu">
             <nav>
